--- a/ios/yoot01/Info.plist
+++ b/ios/yoot01/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -51,5 +51,22 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Nunito Black Italic.ttf</string>
+		<string>Nunito Black.ttf</string>
+		<string>Nunito Bold Italic.ttf</string>
+		<string>Nunito Bold.ttf</string>
+		<string>Nunito ExtraBold Italic.ttf</string>
+		<string>Nunito ExtraBold.ttf</string>
+		<string>Nunito ExtraLight Italic.ttf</string>
+		<string>Nunito ExtraLight.ttf</string>
+		<string>Nunito Italic.ttf</string>
+		<string>Nunito Light Italic.ttf</string>
+		<string>Nunito Light.ttf</string>
+		<string>Nunito Regular.ttf</string>
+		<string>Nunito SemiBold Italic.ttf</string>
+		<string>Nunito SemiBold.ttf</string>
+	</array>
 </dict>
 </plist>
