--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^12.9.2",
+    "@react-native-firebase/app-check": "^12.9.3",
+    "@react-native-firebase/auth": "^12.9.3",
     "@react-native-firebase/firestore": "^12.9.2",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
