--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.23.0",
     "html-entities": "^2.3.2",
     "react": "17.0.2",
+    "react-hook-form": "^7.17.5",
     "react-native": "0.66.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
